[package]
name = "redis_api-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["tls-native-tls"] }
redis-module = "2.0.7"
serde = "1.0.196"
serde_json = "1.0.113"
