[package]
name = "redis_api-fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
connection = "0.2.5"
futures = "0.3.30"
headers = "0.4.0"
hex = "0.4.3"
http = "1.0.0"
hyper = "1.1.0"
jsonschema = "0.17.1"
redis = { version = "*", features = ["aio","tokio-comp"] }
serde = "1.0.196"
serde_json = "1.0.113"
sha2 = "0.10.8"

tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.7.0"
valico = "4.0.0"

